# Nursind

./: .gitignore  README.md  manifest.json  pyproject.toml  tasks.ps1
.github/: copilot-instructions.md
src/cartellino_parser/: __init__.py  cli.py  extract.py  models.py  parse_days.py  parse_pairs.py  parse_totals.py  parser.py  utils.py  validate.py
src/drive-scanner/: auth_service.py  config.py  drive_client.py  drive_helpers.py  drive_scanner.py  filter_scan.py  main.py  report_service.py  scan_directory.py  scan_service.py  utils.py
src/drive_scanner/: __init__.py  auth_service.py  client.py  config.py  download_from_index.py  filter_scan.py  logging_utils.py  report_service.py  scan_directory.py  scan_service.py
tests/: test_filter_scan_merge.py  test_parse_samples.py
