[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartellino-parser"
version = "0.1.0"
description = "Parser for Cartellino mensile configurabile PDFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pdfplumber>=0.10.4",
  "pandas>=2.1.0",
]

[project.scripts]
drive-scan = "drive_scanner.scan_directory:main"
drive-filter = "drive_scanner.filter_scan:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
